force-app/main/default/objects/Log_API__c/Log_API__c.object-meta.xml
<CustomObject>
    <label>Log API</label>
    <nameField>
        <displayFormat>LOGAPI{000000}</displayFormat>
        <label>Log API Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs API</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>