force-app/main/default/objects/Log_API__c/fields/API__c.field-meta.xml
<CustomField>
    <fullName>API__c</fullName>
    <label>API</label>
    <referenceTo>API__c</referenceTo>
    <relationshipLabel>Log API</relationshipLabel>
    <relationshipName>Log_API</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>