force-app/main/default/objects/Log_API__c/fields/API_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Record_Type__c</fullName>
    <label>API Record Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>