force-app/main/default/objects/Log_API__c/fields/HTTP_Method__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Method__c</fullName>
    <label>HTTP Method</label>
    <length>30</length>
    <type>Text</type>
</CustomField>