force-app/main/default/objects/Log_API__c/fields/Input_Body__c.field-meta.xml
<CustomField>
    <fullName>Input_Body__c</fullName>
    <label>Input Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>