force-app/main/default/objects/Log_API__c/fields/Output_Body__c.field-meta.xml
<CustomField>
    <fullName>Output_Body__c</fullName>
    <label>Output Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>